Attempting to fix invisible text in phoneview - Footer

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -40,6 +40,7 @@
 .footerWrapper {
     min-height: 60vh;
     background-color: #fff;
+    color: black;
 }
 
 .footerWrapper a {
